<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/black"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:titleEnabled="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax">

                <ImageView
                    android:id="@+id/iv_detail_poster"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/backgrounds/scenic" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="#66000000"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_play_trailer"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:background="@drawable/bg_play_button"
                    android:contentDescription="@string/play_trailer"
                    android:padding="16dp"
                    android:src="@drawable/ic_play_arrow"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/white" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_detail_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_regular"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Jujutsu Kaisen" />

            <ImageView
                android:id="@+id/iv_rating_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/rating_icon"
                android:src="@drawable/ic_star"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_title"
                app:tint="@color/yellow_star" />

            <TextView
                android:id="@+id/tv_detail_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:fontFamily="@font/nunito_regular"
                app:layout_constraintBottom_toBottomOf="@id/iv_rating_icon"
                app:layout_constraintStart_toEndOf="@id/iv_rating_icon"
                app:layout_constraintTop_toTopOf="@id/iv_rating_icon"
                tools:text="9.15" />

            <ImageView
                android:id="@+id/iv_episodes_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="24dp"
                android:contentDescription="@string/episodes_icon"
                android:src="@drawable/ic_episodes"
                app:layout_constraintBottom_toBottomOf="@id/iv_rating_icon"
                app:layout_constraintStart_toEndOf="@id/tv_detail_rating"
                app:layout_constraintTop_toTopOf="@id/iv_rating_icon"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/tv_detail_episodes"
                android:fontFamily="@font/nunito_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="12sp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/iv_episodes_icon"
                app:layout_constraintStart_toEndOf="@id/iv_episodes_icon"
                app:layout_constraintTop_toTopOf="@id/iv_episodes_icon"
                tools:text="24 Episodes" />

            <TextView
                android:id="@+id/label_genres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_regular"
                android:layout_marginTop="24dp"
                android:text="@string/genres"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_rating_icon" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipgroup_genres"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_genres">

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_regular"
                    tools:text="Action" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_regular"
                    tools:text="Fantasy" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_regular"
                    tools:text="Shounen" />
            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/label_synopsis"
                android:layout_width="wrap_content"
                android:fontFamily="@font/nunito_regular"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textAllCaps="true"
                android:text="@string/plot_synopsis"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chipgroup_genres" />

            <TextView
                android:id="@+id/tv_detail_synopsis"
                android:layout_width="0dp"
                android:fontFamily="@font/nunito_regular"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lineSpacingMultiplier="1.4"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_synopsis"
                tools:text="Yuji Itadori, a kind-hearted teenager, joins his school's Occult Club for fun, but discovers that its members are actual sorcerers who can manipulate the energy between beings for their own use. He hears about a cursed talisman - the finger of Sukuna, a demon - and its being targeted by other cursed beings." />

<!--            <TextView-->
<!--                android:id="@+id/label_main_cast"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:fontFamily="@font/nunito_regular"-->
<!--                android:layout_marginTop="24dp"-->
<!--                android:textAllCaps="true"-->
<!--                android:textSize="18sp"-->
<!--                android:text="@string/main_cast"-->
<!--                android:textColor="@color/white"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@id/tv_detail_synopsis" />-->

<!--            <TextView-->
<!--                android:id="@+id/tv_detail_main_cast"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="8dp"-->
<!--                android:lineSpacingMultiplier="1.4"-->
<!--                android:textColor="@color/white"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                android:fontFamily="@font/nunito_regular"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@id/label_main_cast"-->
<!--                tools:text="Yuji Itadori, Satoru Gojo, Megumi Fushiguro, Nobara Kugisaki" />-->

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>